welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:10: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
    if (nums(i)=>n && nums(i)<m) {
            ^